# COMP_GRAPH_2

./: CMakeLists.txt  b_spline.cpp  b_spline.h  main.cpp  profile.h
cmake_modules/: FindSFML.cmake
